--- a/assets/sass/_base/_layout.scss
+++ b/assets/sass/_base/_layout.scss
@@ -10,6 +10,10 @@
 	grid-template-columns: repeat(3, 1fr);
 	gap: $spacing-xl;
 	margin-top: $spacing-xl;
+
+	&--2col {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
 .ash-nazg-card {
